began prepping data for CNN

--- a/Neural Networks.ipynb
+++ b/Neural Networks.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,6 +340,98 @@
    "metadata": {},
    "source": [
     "# Generate Convolutional Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loadCSV(filename):\n",
+    "    file = filename\n",
+    "    if '.csv' not in filename:\n",
+    "        file += '.csv'\n",
+    "    data = pd.read_csv(file, encoding = 'ISO-8859-1')\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = loadCSV(\"binary_classification\")\n",
+    "tokenizer = Tokenizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = [x for x in data[\"tweet_text\"]]\n",
+    "tokenizer.fit_on_texts(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13396 Unique Tokens\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_sequences = tokenizer.texts_to_sequences(X)\n",
+    "word_index = tokenizer.word_index\n",
+    "print(\"%s Unique Tokens\" % len(word_index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max Sequence Length: 129\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_input_len = max([len(x) for x in X])\n",
+    "print(\"Max Sequence Length: %s\" % max_input_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_padded = []"
    ]
   },
   {
@@ -505,13 +597,7 @@
       "10404/10404 [==============================] - 0s 26us/sample - loss: 0.1649 - accuracy: 0.9400 - val_loss: 0.2434 - val_accuracy: 0.9166\n",
       "Epoch 48/50\n",
       "10404/10404 [==============================] - 0s 30us/sample - loss: 0.1618 - accuracy: 0.9401 - val_loss: 0.2458 - val_accuracy: 0.9150\n",
-      "Epoch 49/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 49/50\n",
       "10404/10404 [==============================] - 0s 31us/sample - loss: 0.1633 - accuracy: 0.9405 - val_loss: 0.2457 - val_accuracy: 0.9146\n",
       "Epoch 50/50\n",
       "10404/10404 [==============================] - 0s 30us/sample - loss: 0.1641 - accuracy: 0.9383 - val_loss: 0.2478 - val_accuracy: 0.9146\n",
@@ -741,13 +827,7 @@
       "10404/10404 [==============================] - 0s 32us/sample - loss: 0.1719 - accuracy: 0.9384 - val_loss: 0.2374 - val_accuracy: 0.9154\n",
       "Epoch 48/50\n",
       "10404/10404 [==============================] - 0s 30us/sample - loss: 0.1694 - accuracy: 0.9400 - val_loss: 0.2406 - val_accuracy: 0.9166\n",
-      "Epoch 49/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 49/50\n",
       "10404/10404 [==============================] - 0s 22us/sample - loss: 0.1681 - accuracy: 0.9388 - val_loss: 0.2375 - val_accuracy: 0.9166\n",
       "Epoch 50/50\n",
       "10404/10404 [==============================] - 0s 26us/sample - loss: 0.1697 - accuracy: 0.9392 - val_loss: 0.2408 - val_accuracy: 0.9162\n",
@@ -892,13 +972,7 @@
       "10404/10404 [==============================] - 0s 22us/sample - loss: 0.6908 - accuracy: 0.5334 - val_loss: 0.6939 - val_accuracy: 0.4956\n",
       "Epoch 48/50\n",
       "10404/10404 [==============================] - 0s 24us/sample - loss: 0.6903 - accuracy: 0.5367 - val_loss: 0.6941 - val_accuracy: 0.4971\n",
-      "Epoch 49/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 49/50\n",
       "10404/10404 [==============================] - 0s 27us/sample - loss: 0.6902 - accuracy: 0.5288 - val_loss: 0.6941 - val_accuracy: 0.4940\n",
       "Epoch 50/50\n",
       "10404/10404 [==============================] - 0s 25us/sample - loss: 0.6903 - accuracy: 0.5347 - val_loss: 0.6940 - val_accuracy: 0.4921\n",
@@ -1043,13 +1117,7 @@
       "10404/10404 [==============================] - 3s 332us/sample - loss: 0.0115 - accuracy: 0.9952 - val_loss: 1.0857 - val_accuracy: 0.8904\n",
       "Epoch 46/50\n",
       "10404/10404 [==============================] - 4s 339us/sample - loss: 0.0138 - accuracy: 0.9941 - val_loss: 1.0358 - val_accuracy: 0.8854\n",
-      "Epoch 47/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 47/50\n",
       "10404/10404 [==============================] - 3s 326us/sample - loss: 0.0114 - accuracy: 0.9952 - val_loss: 1.0396 - val_accuracy: 0.8904\n",
       "Epoch 48/50\n",
       "10404/10404 [==============================] - 4s 351us/sample - loss: 0.0104 - accuracy: 0.9951 - val_loss: 1.0874 - val_accuracy: 0.8881\n",
@@ -1198,13 +1266,7 @@
       "10404/10404 [==============================] - 40s 4ms/sample - loss: 0.0079 - accuracy: 0.9949 - val_loss: 0.8010 - val_accuracy: 0.8800\n",
       "Epoch 46/50\n",
       "10404/10404 [==============================] - 41s 4ms/sample - loss: 0.0075 - accuracy: 0.9952 - val_loss: 0.7889 - val_accuracy: 0.8808\n",
-      "Epoch 47/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 47/50\n",
       "10404/10404 [==============================] - 41s 4ms/sample - loss: 0.0076 - accuracy: 0.9954 - val_loss: 0.8042 - val_accuracy: 0.8839\n",
       "Epoch 48/50\n",
       "10404/10404 [==============================] - 40s 4ms/sample - loss: 0.0075 - accuracy: 0.9951 - val_loss: 0.8004 - val_accuracy: 0.8835\n",
@@ -1353,13 +1415,7 @@
       "10404/10404 [==============================] - 3s 307us/sample - loss: 0.0731 - accuracy: 0.9871 - val_loss: 0.6882 - val_accuracy: 0.8689\n",
       "Epoch 46/50\n",
       "10404/10404 [==============================] - 3s 303us/sample - loss: 0.0716 - accuracy: 0.9866 - val_loss: 0.6472 - val_accuracy: 0.8524\n",
-      "Epoch 47/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 47/50\n",
       "10404/10404 [==============================] - 3s 301us/sample - loss: 0.0693 - accuracy: 0.9872 - val_loss: 0.6685 - val_accuracy: 0.8593\n",
       "Epoch 48/50\n",
       "10404/10404 [==============================] - 3s 303us/sample - loss: 0.0680 - accuracy: 0.9877 - val_loss: 0.6641 - val_accuracy: 0.8624\n",
