set up cnn tokenized data

--- a/Neural Networks.ipynb
+++ b/Neural Networks.ipynb
@@ -14,6 +14,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loadCSV(filename):\n",
+    "    file = filename\n",
+    "    if '.csv' not in filename:\n",
+    "        file += '.csv'\n",
+    "    data = pd.read_csv(file, encoding = 'ISO-8859-1')\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -170,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,85 +358,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-    "from tensorflow.keras.utils import to_categorical\n",
     "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def loadCSV(filename):\n",
-    "    file = filename\n",
-    "    if '.csv' not in filename:\n",
-    "        file += '.csv'\n",
-    "    data = pd.read_csv(file, encoding = 'ISO-8859-1')\n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = loadCSV(\"binary_classification\")\n",
-    "tokenizer = Tokenizer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = [x for x in data[\"tweet_text\"]]\n",
-    "tokenizer.fit_on_texts(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13396 Unique Tokens\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_sequences = tokenizer.texts_to_sequences(X)\n",
-    "word_index = tokenizer.word_index\n",
-    "print(\"%s Unique Tokens\" % len(word_index))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max Sequence Length: 129\n"
-     ]
-    }
-   ],
-   "source": [
-    "max_input_len = max([len(x) for x in X])\n",
-    "print(\"Max Sequence Length: %s\" % max_input_len)"
+    "def cnnData():\n",
+    "    tokenizer = Tokenizer()\n",
+    "    encoder = LabelEncoder()\n",
+    "    \n",
+    "    data = loadCSV(\"binary_classification\")\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(data[\"tweet_text\"], data[\"tweet_class\"],\n",
+    "                                                        test_size = 0.2, random_state = 42,\n",
+    "                                                        shuffle = True, stratify = data[\"tweet_class\"])\n",
+    "    max_len = max([len(x) for x in data[\"tweet_text\"]])\n",
+    "    \n",
+    "    tokenizer.fit_on_texts(X_train)\n",
+    "    train_seq = tokenizer.texts_to_sequences(X_train)\n",
+    "    train_seq_array = pad_sequences(train_seq, maxlen = max_len)\n",
+    "    test_seq = tokenizer.texts_to_sequences(X_test)\n",
+    "    test_seq_array = pad_sequences(test_seq, maxlen = max_len)\n",
+    "    \n",
+    "    train_label = encoder.fit_transform(y_train)\n",
+    "    test_label = encoder.fit_transform(y_test)\n",
+    "    \n",
+    "    train = [train_seq_array, train_label]\n",
+    "    test = [test_seq_array, test_label]\n",
+    "    \n",
+    "    return train, test"
    ]
   },
   {
@@ -431,17 +404,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_padded = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def CNN(train, test, iterations = 10):\n",
-    "    return"
+    "def CNN(iteration = 10):\n",
+    "    train, test = cnnData()\n",
+    "\n",
+    "    X_train = train[0]\n",
+    "    y_train = train[1]\n",
+    "    \n",
+    "    X_test = train[0]\n",
+    "    y_train = train[1]"
    ]
   },
   {
