setup training and evaluation of rnn

--- a/Neural Networks.ipynb
+++ b/Neural Networks.ipynb
@@ -291,7 +291,6 @@
     "    X_test = test[0]\n",
     "    y_test = test[1]\n",
     "    \n",
-    "    #~13000, ~80000, 500, 200, 50\n",
     "    dim = len(X_train[0])\n",
     "    \n",
     "    model = models.Sequential()\n",
@@ -328,7 +327,7 @@
     "    \n",
     "    start = time.time()\n",
     "    \n",
-    "    callback = [EarlyStopping(monitor = 'val_loss', min_delta = .0001, restore_best_weights = True)]\n",
+    "    callback = [EarlyStopping(monitor = 'val_loss', min_delta = .0001)]\n",
     "    if early_stop:\n",
     "        history = model.fit(X_train, y_train,\n",
     "                            epochs = iterations,\n",
@@ -359,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate Convolutional Neural Network"
+    "# Generate Tokenized Data for CNN and RNN"
    ]
   },
   {
@@ -379,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cnnData():\n",
+    "def tokenData():\n",
     "    tokenizer = Tokenizer()\n",
     "    encoder = LabelEncoder()\n",
     "    \n",
@@ -412,21 +411,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate Convolutional Neural Network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def CNN(iterations = 50, early_stop = False):\n",
-    "    train, test, max_len, vocab_size = cnnData()\n",
+    "    train, test, max_len, vocab_size = tokenData()\n",
     "\n",
     "    X_train = train[0]\n",
     "    y_train = train[1]\n",
     "    \n",
     "    X_test = test[0]\n",
     "    y_test = test[1]\n",
-    "    \n",
-    "    dim = len(X_train[0])\n",
     "    \n",
     "    model = models.Sequential()\n",
     "    model.add(layers.Embedding(input_dim = vocab_size, output_dim = 32, input_length = max_len))\n",
@@ -446,7 +450,7 @@
     "                  optimizer = 'adam',\n",
     "                  metrics = ['accuracy'])\n",
     "    \n",
-    "    callback = [EarlyStopping(monitor = 'val_loss', min_delta = .0001, restore_best_weights = True)]\n",
+    "    callback = [EarlyStopping(monitor = 'val_loss', min_delta = .0001)]\n",
     "    \n",
     "    start = time.time()\n",
     "    if early_stop:\n",
@@ -475,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate Recurrent Neural Network"
+    "# Generate Recurrent Neural Network with LSTM"
    ]
   },
   {
@@ -484,8 +488,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def RNN(train, test, iterations = 10):\n",
-    "    return"
+    "def RNN(iterations = 50, early_stop = False):\n",
+    "    train, test, max_len, vocab_size = tokenData()\n",
+    "\n",
+    "    X_train = train[0]\n",
+    "    y_train = train[1]\n",
+    "    \n",
+    "    X_test = test[0]\n",
+    "    y_test = test[1]\n",
+    "    \n",
+    "    model = models.Sequential()\n",
+    "    model.add(layers.Embedding(input_dim = vocab_size, output_dim = 128, input_len = max_len))\n",
+    "    model.add(layers.SpatialDropout1D(0.5))\n",
+    "    model.add(layers.LSTM(128, dropout = 0.5, recurrent_dropout = 0.5))\n",
+    "    model.add(layers.Dense(32, activation = 'relu'))\n",
+    "    model.add(layers.Dropout(0.5))\n",
+    "    model.add(layers.Dense(1, activation = 'sigmoid'))\n",
+    "    \n",
+    "    model.summary()\n",
+    "    model.compile(loss = 'binary_crossentropy',\n",
+    "                  optimizer = 'adam',\n",
+    "                  metrics = ['accuracy'])\n",
+    "    \n",
+    "    callback = [EarlyStopping(monitor = 'val_loss', min_delta = .0001)]\n",
+    "    \n",
+    "    start = time.time()\n",
+    "    if early_stop:\n",
+    "        history = model.fit(X_train, y_train,\n",
+    "                            epochs = iterations,\n",
+    "                            batch_size = 128,\n",
+    "                            callbacks = callback,\n",
+    "                            validation_data = (X_test, y_test))\n",
+    "    else:\n",
+    "        history = model.fit(X_train, y_train,\n",
+    "                            epochs = iterations,\n",
+    "                            batch_size = 128,\n",
+    "                            validation_data = (X_test, y_test))\n",
+    "    end = time.time() - start\n",
+    "    \n",
+    "    test_vals = model.evaluate(X_test, y_test)\n",
+    "    \n",
+    "    print(\"Training Time:  \", end)\n",
+    "    print(\"Model Loss:     \", test_vals[0])\n",
+    "    print(\"Model Accuracy: \", test_vals[1])\n",
+    "    \n",
+    "    return model, history, test"
    ]
   },
   {
@@ -726,6 +773,209 @@
    "source": [
     "evaluate(rnn_model, rnn_model_history, test_rnn, 'Recurrent Neural Network')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training Deep Neural Networks - Early Stopping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DNN Reduced Unigram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DNN Reduced Bigram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DNN Reduced TFIDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DNN Word2Vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DNN Unigram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DNN Bigram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DNN TFIDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluating Deep Neural Networks - Early Stopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training and Evaluating Convolutional Neural Network - Early Stopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training and Evaluating Recurrent Neural Network - Early Stopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
