setup early stop training and evaluation of neural nets

--- a/Neural Networks.ipynb
+++ b/Neural Networks.ipynb
@@ -793,7 +793,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dnn_runi_s, dnn_runi_s_history = DNN(train_runi, test_runi, early_stopping = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -807,7 +809,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dnn_rbig_s, dnn_rbig_s_history = DNN(train_rbig, test_rbig, early_stopping = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -821,7 +825,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dnn_rtfidf_s, dnn_rtfidf_s_history = DNN(train_rtfidf, test_rtfidf, early_stopping = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -835,7 +841,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dnn_vec_s, dnn_vec_s_history = DNN(train_vec, test_vec, early_stopping = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -849,7 +857,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dnn_uni_s, dnn_uni_s_history = DNN(train_uni, test_uni, early_stopping = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -863,7 +873,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dnn_big_s, dnn_big_s_history = DNN(train_big, test_big, early_stopping = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -877,7 +889,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dnn_tfidf_s, dnn_tfidf_s_history = DNN(train_tfidf, test_tfidf, early_stopping = True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -891,49 +905,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evaluate(dnn_uni_s, dnn_uni_s_history, test_uni, \"DNN Unigram - Early Stop\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evaluate(dnn_big_s, dnn_big_s_history, test_big, \"DNN Bigram - Early Stop\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evaluate(dnn_tfidf_s, dnn_tfidf_s_history, test_tfidf, \"DNN TFIDF - Early Stop\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evaluate(dnn_vec_s, dnn_vec_s_history, test_vec, \"DNN Word2Vec - Early Stop\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evaluate(dnn_runi_s, dnn_runi_s_history, test_runi, \"DNN Reduced Unigram - Early Stop\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evaluate(dnn_rbig_s, dnn_rbig_s_history, test_rbig, \"DNN Reduced Bigram - Early Stop\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evaluate(dnn_rtfidf_s, dnn_rtfidf_s_history, test_rtfidf, \"DNN Reduced TFIDF - Early Stop\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -947,14 +975,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cnn_stop, cnn_stop_history, test_cnn_stop = CNN(early_stopping = True)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evaluate(cnn_stop, cnn_stop_history, test_cnn_stop, \"CNN - Early Stop\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -968,14 +1000,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rnn_stop, rnn_stop_history, test_rnn_stop = RNN(early_stopping = True)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evaluate(rnn_stop, rnn_stop_history, test_rnn_stop, \"RNN - Early Stop\")"
+   ]
   }
  ],
  "metadata": {
