training vs validation loss/acc for plots

--- a/Neural Networks.ipynb
+++ b/Neural Networks.ipynb
@@ -215,22 +215,29 @@
    "source": [
     "def plotFigures(hist, epoch_range):\n",
     "    \n",
+    "    training_loss = hist.history['loss']\n",
+    "    training_acc = hist.history['accuracy']\n",
+    "    \n",
     "    validation_loss = hist.history['val_loss']\n",
     "    validation_acc = hist.history['val_accuracy']\n",
     "    \n",
     "    epochs = range(1, epoch_range + 1)\n",
     "    \n",
     "    f = plt.figure(1)\n",
-    "    plt.title(\"Loss\")\n",
-    "    plt.plot(epochs, validation_loss, 'bo')\n",
+    "    plt.title(\"Training and Validation Loss\")\n",
+    "    plt.plot(epochs, training_loss, 'r', label = 'Training Loss')\n",
+    "    plt.plot(epochs, validation_loss, 'b', label = 'Validation Loss')\n",
     "    plt.xlabel('Epochs')\n",
-    "    plt.ylabel('Validation Loss')\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.legend()\n",
     "    \n",
     "    g = plt.figure(2)\n",
-    "    plt.title(\"Accuracy\")\n",
-    "    plt.plot(epochs, validation_acc, 'ro')\n",
+    "    plt.title(\"Training and Validation Accuracy\")\n",
+    "    plt.plot(epochs, training_acc, 'r', label = 'Training Acc')\n",
+    "    plt.plot(epochs, validation_acc, 'b', label = 'Validation Acc')\n",
     "    plt.xlabel('Epochs')\n",
-    "    plt.ylabel('Validation Accuracy')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "    plt.legend()\n",
     "    \n",
     "    plt.show()"
    ]
