--- a/Neural Networks.ipynb
+++ b/Neural Networks.ipynb
@@ -190,6 +190,7 @@
    "source": [
     "from tensorflow.keras import models\n",
     "from tensorflow.keras import layers\n",
+    "from tensorflow.keras.regularizers import l2\n",
     "from tensorflow.keras.callbacks import EarlyStopping"
    ]
   },
@@ -302,29 +303,41 @@
     "    \n",
     "    model = models.Sequential()\n",
     "    if dim > 15000:\n",
-    "        model.add(layers.Dense(500, activation = 'relu', input_shape = (dim,)))\n",
+    "        model.add(layers.Dense(500, kernel_regularizer = l2(.001) \n",
+    "                               activation = 'relu', input_shape = (dim,)))\n",
     "        model.add(layers.Dropout(0.5))\n",
-    "        model.add(layers.Dense(64, activation = 'relu'))\n",
+    "        model.add(layers.Dense(64, kernel_regularizer = l2(.001),\n",
+    "                               activation = 'relu'))\n",
     "        model.add(layers.Dropout(0.5))\n",
-    "        model.add(layers.Dense(4, activation = 'relu'))\n",
+    "        model.add(layers.Dense(4, kernel_regularizer = l2(.001),\n",
+    "                               activation = 'relu'))\n",
     "    elif dim > 10000:\n",
-    "        model.add(layers.Dense(200, activation = 'relu', input_shape = (dim,)))\n",
+    "        model.add(layers.Dense(200, kernel_regularizer = l2(.001),\n",
+    "                               activation = 'relu', input_shape = (dim,)))\n",
     "        model.add(layers.Dropout(0.5))\n",
-    "        model.add(layers.Dense(32, activation = 'relu'))\n",
+    "        model.add(layers.Dense(32, kernel_regularizer = l2(.001),\n",
+    "                               activation = 'relu'))\n",
     "        model.add(layers.Dropout(0.5))\n",
-    "        model.add(layers.Dense(4, activation = 'relu'))\n",
+    "        model.add(layers.Dense(4, kernel_regularizer = l2(.001),\n",
+    "                               activation = 'relu'))\n",
     "    elif dim == 500:\n",
-    "        model.add(layers.Dense(64, activation = 'relu', input_shape = (dim,)))\n",
+    "        model.add(layers.Dense(64, kernel_regularizer = l2(.001),\n",
+    "                               activation = 'relu', input_shape = (dim,)))\n",
     "        model.add(layers.Dropout(0.5))\n",
-    "        model.add(layers.Dense(16, activation = 'relu'))\n",
+    "        model.add(layers.Dense(16, kernel_regularizer = l2(.001),\n",
+    "                               activation = 'relu'))\n",
     "    elif dim == 200:\n",
-    "        model.add(layers.Dense(32, activation = 'relu', input_shape = (dim,)))\n",
+    "        model.add(layers.Dense(32, kernel_regularizer = l2(.001),\n",
+    "                               activation = 'relu', input_shape = (dim,)))\n",
     "        model.add(layers.Dropout(0.5))\n",
-    "        model.add(layers.Dense(4, activation = 'relu'))\n",
+    "        model.add(layers.Dense(4, kernel_regularizer = l2(.001),\n",
+    "                               activation = 'relu'))\n",
     "    elif dim == 50:\n",
-    "        model.add(layers.Dense(16, activation = 'relu', input_shape = (dim,)))\n",
+    "        model.add(layers.Dense(16, kernel_regularizer = l2(.001),\n",
+    "                               activation = 'relu', input_shape = (dim,)))\n",
     "        model.add(layers.Dropout(0.5))\n",
-    "        model.add(layers.Dense(4, activation = 'relu', input_shape = (dim, )))\n",
+    "        model.add(layers.Dense(4, kernel_regularizer = l2(.001),\n",
+    "                               activation = 'relu', input_shape = (dim, )))\n",
     "    model.add(layers.Dense(1, activation = 'sigmoid'))\n",
     "    \n",
     "    model.summary()\n",
@@ -447,7 +460,7 @@
     "    model.add(layers.Conv1D(filters = 32, kernel_size = 3, padding = 'same', activation = 'relu'))\n",
     "    model.add(layers.Flatten())\n",
     "    model.add(layers.Dropout(0.5))\n",
-    "    model.add(layers.Dense(4, activation = 'relu'))\n",
+    "    model.add(layers.Dense(4, kernel_regularizer = l2(.001), activation = 'relu'))\n",
     "    model.add(layers.Dropout(0.5))\n",
     "    model.add(layers.Dense(1, activation = 'sigmoid'))\n",
     "    \n",
@@ -508,7 +521,7 @@
     "    model.add(layers.Embedding(input_dim = vocab_size, output_dim = 128, input_len = max_len))\n",
     "    model.add(layers.SpatialDropout1D(0.5))\n",
     "    model.add(layers.LSTM(128, dropout = 0.5, recurrent_dropout = 0.5))\n",
-    "    model.add(layers.Dense(32, activation = 'relu'))\n",
+    "    model.add(layers.Dense(32, kernel_regularizer = l2(.001), activation = 'relu'))\n",
     "    model.add(layers.Dropout(0.5))\n",
     "    model.add(layers.Dense(1, activation = 'sigmoid'))\n",
     "    \n",
