finished all preparation for neural nets

--- a/Neural Networks.ipynb
+++ b/Neural Networks.ipynb
@@ -292,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def DNN(train, test, iterations = 50, early_stop = False):\n",
+    "def DNN(train, test, iterations = 50, early_stop = False, info = 0):\n",
     "    X_train = train[0]\n",
     "    y_train = train[1]\n",
     "    \n",
@@ -302,16 +302,7 @@
     "    dim = len(X_train[0])\n",
     "    \n",
     "    model = models.Sequential()\n",
-    "    if dim > 15000:\n",
-    "        model.add(layers.Dense(500, kernel_regularizer = l2(.001) \n",
-    "                               activation = 'relu', input_shape = (dim,)))\n",
-    "        model.add(layers.Dropout(0.5))\n",
-    "        model.add(layers.Dense(64, kernel_regularizer = l2(.001),\n",
-    "                               activation = 'relu'))\n",
-    "        model.add(layers.Dropout(0.5))\n",
-    "        model.add(layers.Dense(4, kernel_regularizer = l2(.001),\n",
-    "                               activation = 'relu'))\n",
-    "    elif dim > 10000:\n",
+    "    if dim > 10000:\n",
     "        model.add(layers.Dense(200, kernel_regularizer = l2(.001),\n",
     "                               activation = 'relu', input_shape = (dim,)))\n",
     "        model.add(layers.Dropout(0.5))\n",
@@ -351,16 +342,15 @@
     "    if early_stop:\n",
     "        history = model.fit(X_train, y_train,\n",
     "                            epochs = iterations,\n",
-    "                            verbose = 0,\n",
+    "                            verbose = info,\n",
     "                            batch_size = 128,\n",
     "                            callbacks = callback,\n",
     "                            validation_data = (X_test, y_test))\n",
     "    else:\n",
     "        history = model.fit(X_train, y_train,\n",
     "                            epochs = iterations,\n",
-    "                            verbose = 0,\n",
+    "                            verbose = info,\n",
     "                            batch_size = 128,\n",
-    "                            callbacks = callback,\n",
     "                            validation_data = (X_test, y_test))\n",
     "        \n",
     "    end = time.time() - start\n",
@@ -443,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def CNN(iterations = 50, early_stop = False):\n",
+    "def CNN(iterations = 50, early_stop = False, info = 0):\n",
     "    train, test, max_len, vocab_size = tokenData()\n",
     "\n",
     "    X_train = train[0]\n",
@@ -455,9 +445,9 @@
     "    model = models.Sequential()\n",
     "    model.add(layers.Embedding(input_dim = vocab_size, output_dim = 32, input_length = max_len))\n",
     "    model.add(layers.Dropout(0.5))\n",
-    "    model.add(layers.Conv1D(filters = 64, kernel_size = 3, padding = 'same', activation = 'relu'))\n",
-    "    model.add(layers.MaxPooling1D(pool_size = 2))\n",
     "    model.add(layers.Conv1D(filters = 32, kernel_size = 3, padding = 'same', activation = 'relu'))\n",
+    "    model.add(layers.MaxPooling1D(pool_size = 2))\n",
+    "    model.add(layers.Conv1D(filters = 16, kernel_size = 3, padding = 'same', activation = 'relu'))\n",
     "    model.add(layers.Flatten())\n",
     "    model.add(layers.Dropout(0.5))\n",
     "    model.add(layers.Dense(4, kernel_regularizer = l2(.001), activation = 'relu'))\n",
@@ -476,12 +466,14 @@
     "    if early_stop:\n",
     "        history = model.fit(X_train, y_train,\n",
     "                            epochs = iterations,\n",
+    "                            verbose = info,\n",
     "                            batch_size = 128,\n",
     "                            callbacks = callback,\n",
     "                            validation_data = (X_test, y_test))\n",
     "    else:\n",
     "        history = model.fit(X_train, y_train,\n",
     "                            epochs = iterations,\n",
+    "                            verbose = info,\n",
     "                            batch_size = 128,\n",
     "                            validation_data = (X_test, y_test))\n",
     "    end = time.time() - start\n",
@@ -508,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def RNN(iterations = 50, early_stop = False):\n",
+    "def RNN(iterations = 50, early_stop = False, info = 0):\n",
     "    train, test, max_len, vocab_size = tokenData()\n",
     "\n",
     "    X_train = train[0]\n",
@@ -518,10 +510,10 @@
     "    y_test = test[1]\n",
     "    \n",
     "    model = models.Sequential()\n",
-    "    model.add(layers.Embedding(input_dim = vocab_size, output_dim = 128, input_len = max_len))\n",
+    "    model.add(layers.Embedding(input_dim = vocab_size, output_dim = 64, input_length = max_len))\n",
     "    model.add(layers.SpatialDropout1D(0.5))\n",
-    "    model.add(layers.LSTM(128, dropout = 0.5, recurrent_dropout = 0.5))\n",
-    "    model.add(layers.Dense(32, kernel_regularizer = l2(.001), activation = 'relu'))\n",
+    "    model.add(layers.LSTM(16, dropout = 0.5, recurrent_dropout = 0.5))\n",
+    "    model.add(layers.Dense(4, kernel_regularizer = l2(.001), activation = 'relu'))\n",
     "    model.add(layers.Dropout(0.5))\n",
     "    model.add(layers.Dense(1, activation = 'sigmoid'))\n",
     "    \n",
@@ -536,12 +528,14 @@
     "    if early_stop:\n",
     "        history = model.fit(X_train, y_train,\n",
     "                            epochs = iterations,\n",
+    "                            verbose = info,\n",
     "                            batch_size = 128,\n",
     "                            callbacks = callback,\n",
     "                            validation_data = (X_test, y_test))\n",
     "    else:\n",
     "        history = model.fit(X_train, y_train,\n",
     "                            epochs = iterations,\n",
+    "                            verbose = info,\n",
     "                            batch_size = 128,\n",
     "                            validation_data = (X_test, y_test))\n",
     "    end = time.time() - start\n",
